# curveball

./: Cargo.toml  README.md  about.hbs  about.toml  custom.map  justfile  license.html
curveball/: Cargo.toml  Trunk.toml
curveball-cli/: Cargo.toml
curveball-cli/src/: main.rs
curveball-lib/: Cargo.toml
curveball-lib/src/: brush.rs  entity.rs  lib.rs  lump.rs  map.rs  qmap.rs
curveball-lib/src/curve/: bank.rs  catenary.rs  curve_classic.rs  curve_slope.rs  extrude.rs  mod.rs  rayto.rs  serpentine.rs
curveball-lib/src/curve/extrude/: mod.rs  path.rs  profile.rs
curveball-lib/src/map/: entity.rs  geometry.rs  mod.rs  qmap.rs
curveball-tty/: Cargo.toml
curveball-tty/src/: main.rs
curveball/src/: brush.rs  camera_controller.rs  curveargs.rs  main.rs
curveball/src/curve/: curve_classic.rs  curve_slope.rs  mod.rs  serpentine.rs
curveball/src/gui/: curveopts.rs  egui_blocking_plugin.rs  mod.rs
curveball/src/map/: geometry.rs
curveball/trunk/: index.html  style.css
curvebird/: Cargo.toml  Trunk.toml
curvebird/src/: brush.rs  camera_controller.rs  gui.rs  main.rs
curvebird/src/gui/: curveopts.rs  mod.rs
curvebird/trunk/: index.html
curvecat/: Cargo.toml
curvecat/src/: main.rs
doc/legal/: licenses.html
lib-curveball/: Cargo.toml  README.md
lib-curveball/examples/: curve_classic.rs  custom.rs  extrude_catenary.rs  extrude_custom.rs
lib-curveball/src/: lib.rs
lib-curveball/src/curve/: curve_classic.rs  curve_slope.rs  mod.rs  rayto.rs
lib-curveball/src/curve/extrude/: mod.rs  path.rs  profile.rs
lib-curveball/src/map/: entity.rs  geometry.rs  mod.rs  qmap.rs
