[package]
name = "curvebird"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.0"
bevy_egui = { version = "0.31.1", default-features = false, features = [ "arboard", "bevy_asset", "bevy_image", "bevy_render", "bytemuck", "default_fonts", "encase", "open_url", "render", "thread_local", "webbrowser", "wgpu-types" ] }
copypasta = "0.10.1"
curveball = { path = "../curveball" }
futures-channel = "0.3.31"
glam = "0.29.2"
wasm-bindgen-futures = "0.4.49"
web-sys = { version = "0.3.76", features = ["Clipboard", "Window", "Navigator"] }
