[package]
name = "lib-curveball"
version.workspace = true
license.workspace = true
edition.workspace = true
description = "Curve generating utility for Neverball"
keywords = ["curve", "neverball"]
categories = ["game-development"]
repository.workspace = true

[dependencies]
chull = "0.2.4"
glam = { version = "0.30.0", features = ["debug-glam-assert"] }
itertools = "0.14.0"
lerp = "0.5.0"
thiserror = "2.0.9"
